# warren_buffett_wiki

./: .gitignore  AUDIT-REPORT-1980-1982.md  AUDIT-REPORT.md  CLAWTEAM_INSTRUCTIONS.md  LICENSE  README.md  SCHEMA.md  _task_1981_content.sh  _task_content.txt  _task_qa.txt  index.md  log.md  main.py  pyproject.toml
.claude/: README.md
.obsidian/: workspace.json
.rag/: config.py  docs.json  index.json  paragraphs_meta.json  query.py
companies/: Cypress保险.md  GEICO.md  General-Foods.md  SAFECO公司.md  The-Washington-Post.md  世界图书公司.md  丘博保险.md  互助储贷公司.md  伊利诺伊国民银行.md  伍尔沃斯.md  内布拉斯加家具商场.md  凯撒铝化学公司.md  华盛顿邮报.md  可口可乐.md  吉列.md  喜诗糖果.md  国民保险公司.md  大都会通讯公司.md  奥美国际.md  媒体综合.md  布法罗晚报.md  平克顿安保.md  斯科特费泽公司.md  比阿特丽斯食品.md  汉迪哈曼.md  波仙珠宝.md  消防员基金保险公司.md  盖可保险.md  精密钢铁.md  美国广播公司.md  联合出版公司.md  联合零售商店.md  英特帕布利克集团.md  蓝筹印花.md  通用食品.md  阿美拉达·赫斯.md  雷诺烟草.md  韦斯科金融公司.md  骑士报业公司.md
concepts/: Rip Van Winkle投资法.md  保险浮存金.md  内在价值.md  制度惯性.md  商誉.md  困境反转.md  承保纪律.md  投资人痛苦指数.md  持久竞争优势.md  收益冰山理论.md  无控制权持股收益.md  权益法.md  烟蒂投资法.md  特许经营权.md  现金流承保.md  留存收益.md  真正的指数化.md  社会通胀.md  经济商誉.md  综合比率.md  股本回报率.md  股票回购.md  透视收益.md  递延税.md  通货膨胀.md  长期固定利率债券.md  集中投资.md  顺风与逆风行业.md
docs/: OVERVIEW.md  page-templates.md  plan-concept-enrichment-from-interviews.md  query-guide.md  research-checklist.md  项目规划.md
letters/: 1977-letter.md  1977-summary.md  1978-letter.md  1978-summary.md  1979-letter.md  1979-summary.md  1980-letter.md  1980-summary.md  1981-letter.md  1981-summary.md  1982-letter.md  1982-summary.md  1983-letter.md  1983-summary.md  1984-letter.md  1984-summary.md  (+4 more)
(+961 files in other folders)
