[project]
name = "warren-buffett-wiki"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.15.0",
    "httpx>=0.28.1",
    "lightrag-hku>=1.4.13",
    "requests>=2.33.1",
    "scrapling>=0.4.5",
    "selectolax>=0.4.7",
]
