[project]
name = "buffett-rag"
version = "0.1.0"
description = "Buffett Wiki RAG - 段落级检索 + 概念时间线"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
buffett-rag = "rag.query:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]

[tool.uv.workspace]
members = []
