[project]
name = "buffett-wiki"
version = "0.2.0"
description = "Buffett Wiki CLI - 基于 Meilisearch 的知识库查询工具"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "meilisearch>=0.40.0",
]

[project.scripts]
buffett-wiki = "rag.query:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]

[tool.uv.workspace]
members = []
